[tool.poetry]
name = "chatgpt-prompt-engineering-for-developers"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "chatgpt_prompt_engineering_for_developers"}]

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"
openai = "^0.27.8"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
